[tool.poetry]
name = "lnprototest"
version = "0.0.1"
description = "Lightning BOLT Protocol Test Framework"
authors = [
    "Rusty Russell <rusty@rustcorp.com.au>",
    "Vincenzo Palazzo <vincenzopalazzodev@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.8"
pyln_spec = { path = "external/pyln-spec/", develop = false }
#pyln-testing = ">=0.9.3"
coincurve = "13.0.0"
python-bitcoinlib = ">=0.11.0"
mypy = '0.790'
crc32c = "2.2"
ephemeral-port-reserve = "1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
