[tool.poetry]
name = "lnprototest"
version = "0.0.5-beta.2"
description = "Spec protocol tests for lightning network implementations"
authors = ["Rusty Russell <rusty@blockstream.com>", "Vincenzo Palazzo <vincenzopalazzodev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pyln-bolt4 = "^1.0.222"
pyln-bolt2 = "^1.0.222"
pyln-bolt1 = "^1.0.222"
pyln-client = "^0.12.0"
pyln-testing = "^0.12.0"
crc32c = "^2.2.post0"
# We accidentally published version 1.0.186 instead of 1.0.2.186. That
# version is now yanked by caches remain, so this is a temporary fix.
pyln-bolt7 = "^1.0.246"
pyln-proto = "^23.05.2"
python-bitcoinlib = "^0.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.1.0"
flake8 = "^4.0.1"
pytest-xdist = "^3.1.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
